welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while (!(2 * biscuits = caseOrange + 1)) {
           ^RunHalf:5: error: not found: value biscuit
 if (estSurBiscuit) {biscuit=biscuit+1}
                     ^