welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuits=0
var caseOrange=0
while (!(2 * biscuits = caseOrange + 1)) {
avance()
 if (estSurBiscuit) {biscuit=biscuit+1}
 if (getCouleurSol()==Color.orange) {caseOrange=caseOrange+1}
  
}